# gpu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-06-19_15-22-07Z-review-todo-stub-slang.md  2026-06-19_15-22-38Z-the-following-is-the.md  2026-06-20_17-54-01Z-the-following-is-the.md  2026-06-21_01-08-37Z-review-todo-stub-slang.md  2026-06-21_01-11-36Z-the-following-is-the.md  2026-06-21_14-12-16Z-the-following-is-the.md  2026-06-22_01-02-40Z-the-following-is-the.md  2026-06-23_09-19-57Z-examples-24-sponza-graph.md  2026-06-23_09-19-57Z-ps-g-work-tech.md  2026-06-23_10-23-41Z-the-following-is-the.md  2026-06-23_11-31-47Z-review-todo-stub-slang.md  2026-06-23_11-32-55Z-the-following-is-the.md  2026-06-26_06-46-22Z-review-rhi-texture-buffer.md  2026-06-26_06-46-44Z-the-following-is-the.md
cmake/: CopySlangRhiRuntime.cmake  GpuRuntimeCopy.cmake  GpuThirdParty.cmake
docs/: api.md  arch.md  design.md  features.md  production_ready_rhi.md  rhi_rendergraph_completion_plan.md  roadmap.md
docs/research/: 1.md  ddr.md  slang-rhi评估.md  思路.md
docs/tasks/: phase0-platform.md  phase1-foundation.md  phase2-rendering.md  phase3-ai-frontier.md  task-overview.md
examples/: CMakeLists.txt
examples/00_window/: main.c
examples/00_window_clear/: main.c
examples/01_device_init/: main.c
examples/06_triangle/: main.c  triangle.slang
examples/06b_triangle_readback/: CMakeLists.txt  main.c
examples/07_compute_pipeline/: main.c  prefix_sum.slang
examples/13_backend_switch/: main.c
examples/14_feature_gating/: main.c
examples/15_tensor_matmul/: main.c
examples/16_neural_render/: main.c
examples/17_workgraph/: main.c
examples/18_raytracing/: main.c
examples/19_full_demo/: main.c
examples/20_tensor_data_ops/: CMakeLists.txt  main.c
examples/21_sponza_data_driven/: main.cpp
examples/22_triangle_graph/: main.c
examples/23_readback_graph/: main.c
examples/24_sponza_graph/: forward.slang  main.cpp  shadow.slang
examples/24_sponza_graph/core/: camera.cpp  camera.h  demo_scene.cpp  demo_scene.h  dir_light_control.cpp  dir_light_control.h  render_features.h  render_view_mode.h  shadow_math.cpp  shadow_math.h  simple_scene.cpp  simple_scene.h  sponza_loader.cpp  sponza_loader.h  types.h
examples/24_sponza_graph/render/: bindless_bind.h  frame_data.h  frame_graph.cpp  frame_graph.h  frame_update.cpp  light_system.cpp  light_system.h  material_textures.cpp  material_textures.h  pass_bindings.cpp  pass_bindings.h  pass_callbacks.cpp  pass_callbacks.h  pipelines.cpp  pipelines.h  placed_lights.cpp  placed_lights.h  render_resources.cpp  render_resources.h  shadow_diag.cpp  shadow_diag.h
examples/24_sponza_graph/shaders/: common.slang  forward.slang  gbuffer.slang  light_cull.slang  shadow.slang  ssgi.slang
examples/24_sponza_graph/tools/: analyze_shadow_dump.py  analyze_sponza_materials.py  check_upper_geometry.py  check_uv_ranges.py  test_cascade_ndc.py  test_ground_shadow_depth.py  test_simple_cascade_ndc.py
examples/25_async_compute_graph/: fill.slang  main.c
scripts/: ci-local.ps1  ci-local.sh
src/gpu/: CMakeLists.txt  gpu-config.cmake.in  gpu.h
src/gpu/ai/: gpu_matrix_pipeline.cpp  gpu_matrix_pipeline.h  gpu_neural.cpp  gpu_neural.h  gpu_tensor.cpp  gpu_tensor.h
src/gpu/bindless/: gpu_bindless_heap.cpp  gpu_bindless_heap.h  gpu_descriptor_alloc.h  gpu_descriptor_set.cpp  gpu_descriptor_set.h
src/gpu/capability/: gpu_capabilities.cpp  gpu_capabilities.h  gpu_fallback_registry.cpp  gpu_fallback_registry.h  gpu_feature_gating.cpp  gpu_feature_gating.h  gpu_feature_info.cpp  gpu_feature_info.h
src/gpu/core/: gpu_backend.cpp  gpu_backend.h  gpu_buffer.cpp  gpu_buffer.h  gpu_command.h  gpu_device.cpp  gpu_device.h  gpu_format.h  gpu_handle.h  gpu_handle_pool.h  gpu_internal.h  gpu_pipeline.cpp  gpu_pipeline.h  gpu_render_pass.cpp  gpu_render_pass.h  gpu_sampler.cpp  gpu_sampler.h  gpu_strutil.h  gpu_texture.cpp  gpu_texture.h  gpu_types.h
src/gpu/debug/: gpu_debug.cpp  gpu_debug.h  gpu_debug_markers.cpp  gpu_debug_markers.h  gpu_validation.h
src/gpu/layout/: gpu_parameter_block.cpp  gpu_parameter_block.h  gpu_pipeline_layout.cpp  gpu_pipeline_layout.h  gpu_shader_object.cpp  gpu_shader_object.h
src/gpu/pipeline/: gpu_cmd_bind.cpp  gpu_cmd_bind.h  gpu_compute_binding.cpp  gpu_compute_binding.h  gpu_mesh_pipeline.cpp  gpu_mesh_pipeline.h  gpu_pipeline_cache.cpp  gpu_pipeline_cache.h  gpu_pipeline_state.cpp  gpu_pipeline_state.h
src/gpu/platform/: gpu_platform.h  gpu_platform_sdl.cpp  gpu_surface.cpp  gpu_surface.h  gpu_swapchain.cpp  gpu_swapchain.h
src/gpu/queue/: gpu_multi_queue.cpp  gpu_multi_queue.h
src/gpu/raytracing/: gpu_raytracing.cpp  gpu_raytracing.h
src/gpu/reflection/: gpu_meta_gen.cpp  gpu_meta_gen.h  gpu_reflection_cache.cpp  gpu_reflection_cache.h  gpu_type_info.cpp  gpu_type_info.h
src/gpu/rendergraph/: gpu_render_graph.cpp  gpu_render_graph.h
src/gpu/resource/: gpu_barrier.cpp  gpu_barrier.h  gpu_copy.cpp  gpu_copy.h  gpu_frame_context.cpp  gpu_frame_context.h  gpu_hazard.cpp  gpu_hazard.h  gpu_readback.cpp  gpu_readback.h  gpu_resource_manager.cpp  gpu_resource_manager.h  gpu_sparse_resource.cpp  gpu_sparse_resource.h  gpu_streaming_manager.cpp  gpu_streaming_manager.h  gpu_transient_heap.cpp  gpu_transient_heap.h
src/gpu/shader/: gpu_shader_cache.cpp  gpu_shader_cache.h  gpu_shader_compiler.cpp  gpu_shader_compiler.h  gpu_slang_module.cpp  gpu_slang_module.h
src/gpu/sync/: gpu_fence.cpp  gpu_fence.h
src/gpu/workgraph/: gpu_work_graph.cpp  gpu_work_graph.h
tests/: CMakeLists.txt
tests/crash/: main.c
tests/phase1/: main.c
tests/phase2/: main.c
tests/phase3/: main.c
tests/phaseA/: main.c
tests/phaseB/: main.c
tests/phaseC/: main.c
tests/phaseD/: main.c  phaseD_layout.json  reflection_test.slang
tests/phaseE/: main.c  render_test.slang
tests/smoke/: main.c
